--- a/src/components/TituloPadrao.modules.css
+++ b/src/components/TituloPadrao.modules.css
@@ -3,7 +3,7 @@
     border-radius: 2rem;
     box-shadow: 0.25rem 0.25rem #1379ca;
     color: #FFF;
-    margin: 0 auto;
+    margin: 2rem auto;
     padding: 0.25rem 0;
     width: 25rem;
 }
